- CK2+ loan decision moved to be beside Jewish one
- Saxon name list updated to be more appropriate
- Removed the useless c_dyrrachion claim on Robert of Apulia, set his 1058 and later Piety total higher so he can Holy War for Sicily before he dies
- Re-enabled Medium Crown Authority for Merchant Republics


Fixes:
- Sijilmasa should now properly convert to EU4
- De Jure CBs should no longer work on some targets meant for Holy Wars
- Many history fixes
- Fixed a typo in BLG that was causing a CTD in Linux OSes
- Various fixes to new religions that become the new Orthodoxy
- Various missing holdings are now buildable
- The Orthodox heresies now count for reclaiming Byzantium
- The Knights Templar and Knights Hospitaller should now properly vassalize to a new orthodoxy Catholic
- Byzantium should no longer shatter if held by someone who is a new orthodoxy Heretic
- "Lip Service" event fixed
- The Upper Pyrenees no longer is a de Jure part of Aquitaine past 934
- Heresies that have become the new orthodoxy can now mend the Schism for Christians
- The Patriach events should no longer appear for non-Christians holding the titles of the ERE or Roman Empire
- Religions under 50 MA should no longer incorrectly have an increased chance of proselytizing
- The 10 year cooldown on holy wars should now apply properly in hardcore mode
- Hardcore mode should no longer cause a CTD on load
- Boleslav's War should no longer end erroneously in the 1000AD bookmark
- Removed extraneous ways of "going pagan". The decision should now be the only way of doing so outside of normal means
- Troops and councillors should now properly appear within Sharawrah
- The incorrect global event no longer appears when Kemetic forms the high priesthood
- Old Wizard Appears event now properly has an option choice for Gallawa
- Removed the Bishop asks to convert to Celtic Paganism event
- The chance for a Celtic mystic to appear has been reduced significantly