@@ -433,9 +433,9 @@ NTitle = {
 	EMPEROR_TITLE_DYNASTY_PRESTIGE = 40,
 
 -- Piety from giving titles to the Church or Holy Orders
-	BARON_GRANT_TO_CHURCH_PIETY = 25,
-	COUNT_GRANT_TO_CHURCH_PIETY = 50,
-	DUKE_GRANT_TO_CHURCH_PIETY = 100,
+	BARON_GRANT_TO_CHURCH_PIETY = 0,
+	COUNT_GRANT_TO_CHURCH_PIETY = 10,
+	DUKE_GRANT_TO_CHURCH_PIETY = 20,
 	KING_GRANT_TO_CHURCH_PIETY = 100,
 	EMPEROR_GRANT_TO_CHURCH_PIETY = 100,
 	
