@@ -433,11 +433,11 @@ NTitle = {
 	EMPEROR_TITLE_DYNASTY_PRESTIGE = 40,
 
 -- Piety from giving titles to the Church or Holy Orders
-	BARON_GRANT_TO_CHURCH_PIETY = 25,
-	COUNT_GRANT_TO_CHURCH_PIETY = 50,
-	DUKE_GRANT_TO_CHURCH_PIETY = 100,
-	KING_GRANT_TO_CHURCH_PIETY = 100,
-	EMPEROR_GRANT_TO_CHURCH_PIETY = 100,
+	BARON_GRANT_TO_CHURCH_PIETY = 0,
+	COUNT_GRANT_TO_CHURCH_PIETY = 0,
+	DUKE_GRANT_TO_CHURCH_PIETY = 0,
+	KING_GRANT_TO_CHURCH_PIETY = 0,
+	EMPEROR_GRANT_TO_CHURCH_PIETY = 0,
 	
 -- Title Creation Cost	
 	BARON_CREATION_COST = 1, -- Unused, impossible
