@@ -33,6 +33,7 @@ Tweaks:
 
 
 Fixes:
+- Piety gain from granting temples to barons removed
 - Sijilmasa should now properly convert to EU4
 - De Jure CBs should no longer work on some targets meant for Holy Wars
 - Many history fixes
